# ReplicaTOR

./: CMakeLists.txt  LICENSE  README.md
problems/k_medoids/DistMat_0.8_0.2_N_250/: DistMat_0.8_0.2_N_250.adj  DistMat_0.8_0.2_N_250.d  DistMat_0.8_0.2_N_250.params
solvers/: solve_k_medoids.cpp
source/cpp/controller/: enums_controller.hpp  parallel_tempering_controller.hpp
source/cpp/defs/: eigen_typedef.hpp  master_defs.hpp
source/cpp/engine/: B_Q_cardinality_engine.cpp  B_Q_cardinality_engine.hpp
source/cpp/model/: B_Q_cardinality_model.hpp
source/cpp/replica/: B_Q_cardinality_replica.cpp  B_Q_cardinality_replica.hpp  black_box_replica.hpp
source/cpp/utilities/: my_time.hpp  utils_display.hpp  utils_file_IO.hpp  utils_macros.hpp  utils_strings.hpp
